# geojson-msgspec

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.rst  pyproject.toml
src/geojson_msgspec/: __init__.py
