[project]
name = "geojson-msgspec"
version = "0.1.0"
description = "msgspec GeoJSON model"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "msgspec>=0.18.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
mypy_path = "src"
python_version = "3.8"
packages=["geojson_msgspec"]

[tool.ruff]
target-version = "py38"
